# todo_app

./: Cargo.toml  package-lock.json  readme.md  todo.db
interface/: package-lock.json  package.json
interface/public/: index.html
interface/src/: App.js
server/: Cargo.toml  todo.db
server/src/: main.rs
src/: main.rs
