[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

members = [
    "todo_app",
]

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }